# Job_Hunter

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  yc_debug.txt  yc_dom_dump.html
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: cc9c2e74a08d_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/ai/: gemini_client.py  prompts.py
backend/app/models/: __init__.py  job.py  resume.py  scrape_run.py
backend/app/routers/: health.py  interview_prep.py  jobs.py  resume.py  resume_analysis.py  scraper.py
backend/app/schemas/: dashboard.py  interview_prep.py  job.py  resume.py  resume_analysis.py
backend/app/scrapers/: base.py  dashboard.py  remoteok.py  yc_jobs.py
backend/app/services/: dashboard_service.py  interview_prep_service.py  job_service.py  match_service.py  resume_analysis_service.py  resume_service.py  scraper_service.py
backend/tests/: conftest.py  test_dashboard_service.py  test_job_service.py  test_match_service.py  test_resume_analysis_service.py  test_resume_service.py  test_scraper_service.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATABASE.md  PRD.md  PROJECT_STATUS.md  PROMPTS.md  TASKS.md  TESTING.md
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx  template.tsx
frontend/app/dashboard/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/resume/: page.tsx
frontend/app/resume-review/: page.tsx
frontend/components/jobs/: JobCard.tsx  (+7 more)
frontend/lib/: api.ts  categorizeSkills.ts  types.ts
frontend/styles/: globals.css
(+27 files in other folders)
